--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="oyun-cerceve"></div>
     <div id="puan"><strong>Eşleşen kart sayısı:</strong><span></span></div>
+    <img class="gif" src="/image/kutlama.gif">
 
     <script src="js/script.js"></script>
 </body>
